# smart_cart_agent

./: .env  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  run_backend.sh  run_frontend.sh  smartcart_design_doc.md
agents/: __init__.py  card_extractor.py  graph.py  intent_parser.py  offer_fetcher.py  price_calculator.py  product_search.py  response_formatter.py  tc_parser.py
api/: routes.py
cache/: __init__.py  ttl_cache.py
config/: __init__.py  llm_factory.py  settings.py
data/: 3_fetched_products_offers.json  5_calculated_ranked_offers.json
frontend/: gradio_app.py  streamlit_app.py
models/: __init__.py  agent_state.py  offer.py  price_graph.py  product.py  session.py
scrapers/: __init__.py  amazon.py  base.py  flipkart.py  parse_flipkart_offers.py  utils.py
tests/: test_intent_parser_real_llm.py  test_scrapers.py
utils/: __init__.py
